fix: Unknown method getFirst()